testsuite/tests/typing-objects-bugs/pr4435_bad.compilers.reference
File "pr4435_bad.ml", line 17, characters 6-7:
17 | class c (v : int) =
           ^
Error: Multiple definition of the class name "c".
       Names must be unique in a given structure or signature.
